--- a/Credit_Card_Page/index.html
+++ b/Credit_Card_Page/index.html
@@ -1,88 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Credit Card Page</title>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Credit Card Page</title>
 
-    <link rel="stylesheet" href="./styles/index.css">
-    <link rel="stylesheet" href="./styles/form.css">
-  </head>
+  <link rel="stylesheet" href="./styles/index.css">
+  <link rel="stylesheet" href="./styles/form.css">
+</head>
 
-  <!-- BODY -->
+<!-- BODY -->
 
-  <body>
-    <!-- Main -->
-    <main>
-      <!-- Credit card -->
-      <div class="credit_card">
-        <!-- Credit card heading -->
-        <div class="card_heading">
-          <p class="heading_text">CREDIT CARD DETAILS</p>
+<body>
+  <!-- Main -->
+  <main>
+    <!-- Credit card -->
+    <div class="credit_card">
+      <!-- Credit card heading -->
+      <div class="card_heading">
+        <p class="heading_text">CREDIT CARD DETAILS</p>
+      </div>
+
+      <!-- Content -->
+      <div class="content">
+        <!-- Card number block -->
+        <div class="card_number_block">
+
+          <!-- Label -->
+          <label>Card Number</label>
+
+          <!-- Input card number field -->
+          <input type="number" id="card_number_input" placeholder="1234 5678 9012 3456">
         </div>
 
-        <!-- Content -->
-        <div class="content">
-          <!-- Card number block -->
-          <div class="card_number_block">
+        <!-- Card name block -->
+        <div class="card_name_block">
 
+          <!-- Label -->
+          <label>Name On Card</label>
+
+          <!-- Input card number field -->
+          <input type="text"" id=" card_number_input" placeholder="Name Surname">
+        </div>
+
+        <!-- Additional info -->
+        <div class="additional_info">
+
+          <!-- Expiry month -->
+          <div class="expiry_month">
             <!-- Label -->
-            <label>Card Number</label>
+            <label>
+              Expiry Date
+            </label>
 
-            <!-- Input card number field -->
-            <input type="number" id="card_number_input"
-              placeholder="1234 5678 9012 3456">
+            <!-- Expiry month -->
+            <input type="number" id="expiry_month_number_input" placeholder="02">
           </div>
 
-          <!-- Card name block -->
-          <div class="card_name_block">
-
-            <!-- Label -->
-            <label>Name On Card</label>
-
-            <!-- Input card number field -->
-            <input type="text" id="card_number_input"
-              placeholder="Name Surname">
+          <!-- Expiry year -->
+          <div class="expiry_year">
+            <input type="number" id="expiry_year_number_input" placeholder="2017">
           </div>
 
-          <!-- Additional info -->
-          <div class="additional_info">
+          <!-- CVV / CVN -->
+          <div class="cvv_cvn_block">
 
-            <!-- Expiry date -->
-            <div class="expiry_date_block">
+            <!-- Label -->
+            <label>CVV / CVN</label>
 
-              <!-- Label -->
-              <label>
-                Expiry Date
-              </label>
-
-              <!-- Expiry input -->
-              <div class="expiry_input">
-
-                <!-- Expiry month -->
-                <input type="number" id="expiry_month_number_input"
-                  placeholder="02">
-
-                <!-- Expiry year -->
-                <input type="number" id="expiry_year_number_input"
-                  placeholder="2017">
-              </div>
-            </div>
-
-            <!-- CVV / CVN -->
-            <div class="cvv_cvn_block">
-
-              <!-- Label -->
-              <label>CVV / CVN</label>
-
-              <!-- Input CVV / CVN number -->
-              <input type="number" id="cvv_cvn_input" placeholder="***">
-            </div>
+            <!-- Input CVV / CVN number -->
+            <input type="number" id="cvv_cvn_input" placeholder="***">
           </div>
         </div>
       </div>
-    </main>
-  </body>
+    </div>
+  </main>
+</body>
 
 </html>
