--- a/Mini-Styles_Library/index.html
+++ b/Mini-Styles_Library/index.html
@@ -90,14 +90,14 @@
 
           <!-- Male -->
           <div class="male">
-            <input type="radio" name="" id="male_id">
-            <span class="male_title">Male</span>
+            <input type="radio" name="male" id="male_id">
+            <label for="male_id">Male</label>
           </div>
 
           <!-- Female -->
           <div class="female">
-            <input type="radio" name="" id="female_id">
-            <span class="female_title">Female</span>
+            <input type="radio" name="female" id="female_id">
+            <label for="female_id">Female</label>
           </div>
         </div>
       </label>
@@ -134,6 +134,8 @@
       </label>
     </form>
   </main>
+
+  <script src="./index.js"></script>
 </body>
 
 </html>
