--- a/Mini-Styles_Library/index.html
+++ b/Mini-Styles_Library/index.html
@@ -130,7 +130,7 @@
         </span>
 
         <!-- Textarea -->
-        <textarea name="input_textarea" id="textarea" cols="20" rows="6" placeholder="Enter some text..."></textarea>
+        <textarea name="input_textarea" id="textarea" rows="6" placeholder="Enter some text..."></textarea>
       </label>
     </form>
   </main>
